@@ -1,18 +1,0 @@
-/****************************************************************************
- *
- * $Source: /usr/local/cvsroot/unixlib/source/clib/sys/h/dirent,v $
- * $Date: 1997/10/09 19:59:53 $
- * $Revision: 1.2 $
- * $State: Exp $
- * $Author: unixlib $
- *
- ***************************************************************************/
-
-#ifndef __SYS_DIRENT_H
-#define __SYS_DIRENT_H
-
-#ifndef __DIRENT_H
-#include <dirent.h>
-#endif
-
-#endif
